# digikey_mcp

./: .dockerignore  .env.example  README.md  pyproject.toml  server.py
src/digikey_mcp/: __init__.py  __main__.py  client.py  server.py
src/digikey_mcp/api/: __init__.py  catalog.py  product.py  search.py
tests/: conftest.py
tests/integration/: test_search_integration.py
tests/mcp_client/: __init__.py  test_search_tool.py
tests/unit/: test_validation.py
