[project]
name = "digikey-mcp"
version = "0.1.0"
description = "DigiKey MCP Server for product search"
dependencies = [
    "fastmcp",
    "requests",
    "python-dotenv",
]
requires-python = ">=3.10"

[project.scripts]
digikey-mcp = "digikey_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/digikey_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 